# CPS5124-assignment-1

./: .gitignore  CMakeLists.txt  CPS5124-assignment-1.docx  README.md  Render times.xlsx
res/scenes/: assignment_01.json  assignment_02.json  assignment_03.json  assignment_04.json  assignment_05.json  assignment_06.json  assignment_07.json  assignment_08.json  furnace.json  many_spheres.json
src/: main.cpp
src/loaders/: camera-loader.hpp  lights-loader.hpp  material-loader.hpp  scene-loader.hpp  shapes-loader.hpp
src/models/: object.hpp  primitive.hpp  scene.cpp  scene.hpp
src/models/cameras/: camera.cpp  camera.hpp  lens-camera.cpp  lens-camera.hpp  pinhole.cpp  pinhole.hpp
src/models/lights/: area-light.cpp  area-light.hpp  light.cpp  light.hpp  point-light.cpp  point-light.hpp
src/models/materials/: diffuse.cpp  diffuse.hpp  fresnel.cpp  fresnel.hpp  glossy.cpp  glossy.hpp  material.cpp  material.hpp  specular.cpp  specular.hpp
src/models/primitives/: emitter-primitive.hpp  primitive.hpp
src/models/rays/: ray-sampler.cpp  ray-sampler.hpp  ray.hpp
src/models/renderers/: renderer.hpp
src/models/shapes/: shape.cpp  shape.hpp  sphere.cpp  sphere.hpp
src/processors/: box-blur.hpp  linear-tonemapper.hpp  post-processor.hpp  sigmoidal-tonemapper.hpp
src/renderers/: renderer.cpp  renderer.hpp
src/renderers/path-renderer/: path-renderer.cpp  path-renderer.hpp
src/renderers/path-renderer copy/: path-renderer.cpp  path-renderer.hpp
src/renderers/whitted-renderer/: whitted-renderer.cpp  whitted-renderer.hpp
src/utils/: mat.hpp  utils.cpp  utils.hpp  vec.hpp
